fixed vertical alignment for suggested contacts

--- a/public/bootstrap/less/trpInvites.less
+++ b/public/bootstrap/less/trpInvites.less
@@ -35,15 +35,21 @@
 
   .avatarContainer {
     display: table-cell;
+    vertical-align: middle;
     width: 42px;
+    .trpInviteAvatar {
+      display: block;
+    }
   }
 
   .trpInviteName {
     display: table-cell;
+    vertical-align: middle;
   }
 
   .inviteButtonContainer {
     display: table-cell;
+    vertical-align: middle;
     width: 60px;
   }
 }
@@ -81,8 +87,6 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  vertical-align: top;
-  line-height: 34px;
 }
 
 .trpInviteEmails {
